--- a/src/app/heores/heores.component.html
+++ b/src/app/heores/heores.component.html
@@ -5,7 +5,8 @@
       <span class="badge">{{hero.id}}</span> {{ hero.name}}
   </li>
 </ul>
-
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
+<!--
 <div *ngIf="selectedHero">
   <h2>{{ selectedHero.name}} Details</h2>
   <div><span>id: </span> {{ selectedHero.id}}</div>
@@ -15,4 +16,4 @@
       <input [(ngModel)]="selectedHero.name" placeholder="name">
     </label>
   </div>
-</div>
+</div>-->
